feat(tools): implement local smolagents tools (file system, os exec, clipboard, screenshot)
Add four local tools to extend smolagents CodeAgent capabilities:
- FileSystemTool: read, write, create, delete, list, move, search files
- OsExecTool: execute PowerShell commands with timeout and output capture
- ClipboardTool: read and write Windows clipboard content
- ScreenshotTool: capture full screen or region to configurable directory

Increase agent max_steps from 5 to 10 for complex multi-step tasks.
Remove Z.ai models (glm-4.7) due to HTML/XML tag compatibility issues.
Add dependencies: pyperclip, pyautogui, pillow, mcp support.

Update documentation with tool implementation details and test results.

--- a/.env.example
+++ b/.env.example
@@ -44,12 +44,18 @@ OLLAMA_BASE_URL="http://localhost:11434"
 
 # --- Z.ai / GLM-4.7 (optionnel — cloud) ---
 # https://open.bigmodel.cn/dev/api
-ZAI_API_KEY=""
-ZAI_BASE_URL="https://open.bigmodel.cn/api/paas/v4"
+# Désactivé temporairement - problèmes de compatibilité avec smolagents
+# Les modèles GLM-4.7 génèrent du code avec des balises HTML/XML qui causent des erreurs de syntaxe Python
+# ZAI_API_KEY=""
+# ZAI_BASE_URL="https://api.z.ai/api/coding/paas/v4"
 
 # --- SearXNG (local) ---
 # Démarrer avec : docker run -d -p 8888:8080 searxng/searxng
 SEARXNG_URL="http://localhost:8888"
+
+# --- Screenshots (TOOL-8) ---
+# Répertoire pour stocker les captures d'écran
+SCREENSHOT_DIR="C:\tmp\myclawshots"
 
 # ============================================================
 # V2 — Voice / STT (ne pas remplir avant le module V2-A)
