--- a/agent/pyproject.toml
+++ b/agent/pyproject.toml
@@ -5,7 +5,7 @@ description = "my-claw — Agent Python smolagents"
 requires-python = ">=3.11"
 
 dependencies = [
-    "smolagents[litellm]>=1.9.0",
+    "smolagents[litellm,mcp]>=1.9.0",
     "fastapi>=0.115.0",
     "uvicorn[standard]>=0.32.0",
     "pydantic>=2.9.0",
@@ -13,6 +13,9 @@ dependencies = [
     "httpx>=0.27.0",
     "gradio>=5.0.0",
     "python-dotenv>=1.0.0",
+    "pyperclip>=1.11.0",
+    "pyautogui>=0.9.54",
+    "pillow>=12.1.1",
 ]
 
 [project.optional-dependencies]
