feat(tools): replace MCP Vision with local Ollama qwen3-vl:2b
- Remove MCP dependency from agent, switch to 100% local tools
- Implement TOOL-7 (VisionTool) using Ollama qwen3-vl:2b instead of Z.ai GLM-4.6V
- Add vision model to available models list (fast/smart/main/vision/code/reason)
- Fix curl alias issue in os_exec: PowerShell's curl is Invoke-WebRequest, use curl.exe explicitly
- Increase timeouts: gateway 6min (360s), gradio 5min (300s) for image analysis
- Update model defaults: smart=qwen3:8b recommended, main=qwen3:8b default
- Extract ModelSelector component for reusability across webchat pages
- Fix setup.ps1 env file paths to use absolute paths for gateway/.env.example and agent/.env.example
- Update documentation: vision now 100% local, Z.ai optional for code/reason only
- Add os_exec guidance to prefer Python native libraries over PowerShell for HTTP/data operations

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,18 @@
 # ============================================================
-# .env.example — Copier vers .env.local et remplir les valeurs
-# Générer des tokens : openssl rand -hex 32
+# .env.example — Documentation de référence complète
+# ============================================================
+#
+# Ce fichier sert de DOCUMENTATION COMPLÈTE de toutes les variables
+# d'environnement utilisées dans le projet my-claw.
+#
+# IMPORTANT: Ne PAS copier ce fichier directement !
+#
+# Pour configurer l'environnement :
+# - Gateway : Copier gateway/.env.example vers gateway/.env.local
+# - Agent   : Copier agent/.env.example vers agent/.env
+#
+# Ou utiliser le script d'installation : .\setup.ps1
+#
 # ============================================================
 
 # ============================================================
@@ -42,12 +54,13 @@ NEXTCLOUD_BOT_ID=""               # ID du bot dans Nextcloud
 # --- Ollama (local — 0 donnée sortante) ---
 OLLAMA_BASE_URL="http://localhost:11434"
 
-# --- Z.ai / GLM-4.7 (optionnel — cloud) ---
+# --- Z.ai / GLM-4.7 + Vision (optionnel — cloud) ---
 # https://open.bigmodel.cn/dev/api
-# Désactivé temporairement - problèmes de compatibilité avec smolagents
-# Les modèles GLM-4.7 génèrent du code avec des balises HTML/XML qui causent des erreurs de syntaxe Python
-# ZAI_API_KEY=""
-# ZAI_BASE_URL="https://api.z.ai/api/coding/paas/v4"
+# Requis pour TOOL-7 (MCP Vision GLM-4.6V) - analyse d'images, OCR, diagrammes
+# Requis pour modèles "code" (glm-4.7-flash) et "reason" (glm-4.7)
+# IMPORTANT: Utiliser l'API Coding dédiée pour le GLM Coding Plan
+ZAI_API_KEY=""
+ZAI_BASE_URL="https://api.z.ai/api/coding/paas/v4"
 
 # --- SearXNG (local) ---
 # Démarrer avec : docker run -d -p 8888:8080 searxng/searxng
