--- a/agent/pyproject.toml
+++ b/agent/pyproject.toml
@@ -5,8 +5,7 @@ description = "my-claw — Agent Python smolagents"
 requires-python = ">=3.11"
 
 dependencies = [
-    "smolagents[litellm,mcp]>=1.9.0",
-    "mcp>=0.9.0",
+    "smolagents[litellm]>=1.9.0",
     "fastapi>=0.115.0",
     "uvicorn[standard]>=0.32.0",
     "pydantic>=2.9.0",
