feat(agent): integrate chrome devtools mcp tools
Implement Chrome DevTools MCP integration using MCPClient as a context
manager within the /run endpoint. This approach avoids async event loop
conflicts with FastAPI and provides automatic fallback to local tools
if MCP connection fails.

- Add mcp>=0.9.0 and smolagents[mcp] dependencies
- Use MCPClient context manager for tool loading per request
- Merge Chrome DevTools MCP tools with local tools
- Add configuration option for enabling/disabling MCP
- Update documentation with implementation details

--- a/agent/.env.example
+++ b/agent/.env.example
@@ -9,3 +9,7 @@ ZAI_BASE_URL=https://api.z.ai/api/coding/paas/v4
 
 # Répertoire pour les screenshots
 SCREENSHOT_DIR=C:\tmp\myclawshots
+
+# Chrome DevTools MCP (optionnel)
+# Si non configuré, Chrome DevTools MCP sera désactivé silencieusement
+# CHROME_DEVTOOLS_ENABLED=false
