refactor(agent): manage mcp client lifecycle with app startup/shutdown
Refactor Chrome DevTools MCP client initialization from per-request to
application lifespan management using FastAPI lifespan context manager.

This change:
- Initializes MCP tools once at startup via ToolCollection.from_mcp()
- Properly closes MCP client on shutdown
- Eliminates overhead of creating new client on each /run request
- Adds mcpadapt dependency for robust MCP client thread management

--- a/.env.example
+++ b/.env.example
@@ -71,6 +71,24 @@ SEARXNG_URL="http://localhost:8888"
 SCREENSHOT_DIR="C:\tmp\myclawshots"
 
 # ============================================================
+# DÉPENDANCES PYTHON (agent/)
+# ============================================================
+#
+# Les dépendances Python sont gérées par uv et définies dans agent/pyproject.toml
+#
+# Dépendances principales :
+# - smolagents[litellm,mcp]>=1.9.0  : Framework d'agents avec support MCP
+# - mcp>=0.9.0                      : SDK Model Context Protocol
+# - mcpadapt                         : Adaptateur MCP pour smolagents (gestion robuste des threads)
+#
+# Installation des dépendances :
+#   cd agent && uv add <package>
+#
+# Exemple : Ajouter mcpadapt pour la gestion robuste des clients MCP
+#   cd agent && uv add mcpadapt
+#
+
+# ============================================================
 # V2 — Voice / STT (ne pas remplir avant le module V2-A)
 # ============================================================
 # NEXTCLOUD_API_USER=""
