--- a/agent/pyproject.toml
+++ b/agent/pyproject.toml
@@ -17,6 +17,7 @@ dependencies = [
     "pyautogui>=0.9.54",
     "pillow>=12.1.1",
     "mcp>=0.9.0",
+    "mcpadapt>=0.1.19",
 ]
 
 [project.optional-dependencies]
