feat(multi-agent): implement multi-agent architecture with specialized agents
Migrate to Manager + specialized sub-agents architecture for improved task delegation and resource utilization.

- Create agent/models.py module for centralized model management
- Add specialized agents: pc_control, vision, browser, web_search
- Implement QwenGroundingTool using qwen3-vl:2b for GUI grounding
- Update main.py to use build_multi_agent_system() pattern
- Enhance vision.py with automatic model detection
- Add DEFAULT_MODEL configuration in .env.example
- Update gradio_app.py for Gradio 6.6.0 compatibility
- Enhance skills.txt with multi-agent usage patterns
- Add structured_output=False to all tool classes
- Update version to 0.2.0 in pyproject.toml
- Document architecture changes in AGENTS.md, LEARNING.md, PROGRESS.md
- Create migration and validation plan documents

--- a/agent/.env.example
+++ b/agent/.env.example
@@ -7,6 +7,10 @@ OLLAMA_BASE_URL=http://localhost:11434
 ZAI_API_KEY=
 ZAI_BASE_URL=https://api.z.ai/api/coding/paas/v4
 
+# Modèle par défaut pour le manager et les sous-agents
+# Options : main (qwen3:8b local), coding (glm-4.7-flash cloud), reason (glm-4.7 cloud)
+DEFAULT_MODEL=reason
+
 # Répertoire pour les screenshots
 SCREENSHOT_DIR=C:\tmp\myclawshots
 
