--- a/agent/pyproject.toml
+++ b/agent/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "my-claw-agent"
-version = "0.1.0"
-description = "my-claw — Agent Python smolagents"
+version = "0.2.0"
+description = "my-claw — Agent Python smolagents multi-agent"
 requires-python = ">=3.11"
 
 dependencies = [
@@ -11,7 +11,7 @@ dependencies = [
     "pydantic>=2.9.0",
     "requests>=2.32.0",
     "httpx>=0.27.0",
-    "gradio>=5.0.0",
+    "gradio>=6.6.0", # ← Mis à jour depuis 5.x
     "python-dotenv>=1.0.0",
     "pyperclip>=1.11.0",
     "pyautogui>=0.9.54",
