--- a/agent/pyproject.toml
+++ b/agent/pyproject.toml
@@ -18,6 +18,7 @@ dependencies = [
     "pillow>=12.1.0",
     "mcp>=1.26.0",
     "mcpadapt>=0.1.20",
+    "ddgs>=9.0.0",
 ]
 
 [project.optional-dependencies]
